--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,61 @@
 		/>
 	</head>
 	<body
-		class="font-redHat flex justify-center items-center w-[100dvw] h-[100dvh]"
-	></body>
+		class="font-redHat flex justify-center items-center w-[100dvw] h-[100dvh] bg-paleBlue"
+	>
+		<main
+			class="bg-[#fff] rounded-2xl flex flex-col gap-y-10 items-center text-center pb-6"
+		>
+			<img
+				src="./images/illustration-hero.svg"
+				class="rounded-t-2xl"
+				alt="illustration-hero"
+			/>
+
+			<article class="flex flex-col max-w-xs gap-y-4">
+				<div class="flex flex-col gap-y-3">
+					<h1 class="text-3xl font-extrabold text-darkBlue">
+						Order Summary
+					</h1>
+					<p class="text-desaturatedBlue">
+						You can now listen to millions of songs, audiobooks, and
+						podcasts on any device anywhere you like!
+					</p>
+				</div>
+				<div
+					class="box-content flex items-center justify-between p-4 bg-veryPaleBlue rounded-2xl"
+				>
+					<div class="flex items-center gap-x-3">
+						<img src="./images/icon-music.svg" alt="" />
+						<div class="flex flex-col">
+							<h3 class="text-lg font-extrabold text-darkBlue">
+								Annual Plan
+							</h3>
+							<small class="text-lg text-desaturatedBlue"
+								>$59.99/year</small
+							>
+						</div>
+					</div>
+					<a
+						class="underline underline-offset-2 text-brightBlue hover:no-underline hover:opacity-80"
+						href="#"
+						>Change</a
+					>
+				</div>
+			</article>
+
+			<div class="flex flex-col w-[320px] max-w-xs gap-y-3">
+				<button
+					class="w-full py-3 font-bold rounded-lg text-paleBlue bg-brightBlue hover:bg-opacity-80"
+				>
+					Proceed to Payment
+				</button>
+				<button
+					class="w-full py-3 font-bold text-darkBlue opacity-80 hover:opacity-100"
+				>
+					Cancel Order
+				</button>
+			</div>
+		</main>
+	</body>
 </html>
